beta: added tos agreement checkbox

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- MAIL -->
     <meta name="yandex-verification" content="f86171133514f762" />
@@ -9,18 +10,22 @@
     <title>MathFlare - Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
-    <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
-    <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="keywords"
+        content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
+    <meta name="description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="author" content="MathFlare LLC." />
     <meta name="og:url" content="https://www.mathflare.tk" />
     <meta name="og:title" content="MathFlare" />
-    <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="og:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:locale" content="website" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="MathFlare" />
-    <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="twitter:description"
+        content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <!-- STYLES -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Styles/Footer.css" rel="stylesheet" />
@@ -29,7 +34,9 @@
     <link href="Styles/Site.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="Assets/favicon.ico">
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
@@ -40,6 +47,7 @@
         gtag('config', 'G-7W2S8VV31F');
     </script>
 </head>
+
 <body>
     <!-- NAVBAR START -->
     <div id="nav-container"></div>
@@ -47,30 +55,49 @@
     <div class="center">
         <h1 class="text-white">Contact MathFlare</h1>
         <hr class="bg-danger" style="width: 60%; margin: auto;" />
-            <form id="contact-form" autocomplete="on">
-                <p class=" text-white"><i class="bi bi-lightbulb"></i> Tip: Include your name in the subject of the email</p>
-                <div class="center-form">
-                    <input type="text" id="subj" name="subject" placeholder="Subject (Include First and Last Name)" class="form-control mb-0" required/>
-                </div>
-                <br>
-                <div class="center-form">
-                    <textarea id="msg" name="text" placeholder="Message" class="form-control message" required></textarea>
-                </div>
-                <div class="h-captcha mt-3" data-sitekey="f905f0c2-dacd-408f-b39c-51c7aeace28f"></div>
-                <div class="button-group my-3">
-                    <input type="submit" id="send" name="send" value="Send" class="btn btn-success mx-1"/>
-                    <input type="reset" value="Clear" class="btn btn-danger mx-1"/>
-                </div>
-            </form>
-            <p id="user-message"></p>
-            <div class="container-sm">
-                <p>While you are writing us an email, let us tell you a little bit about our website, MathFlare (previously known as "Liquid Geometry")!
-                 So the pro`ject started as a desktop application using 
-                 <a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="_blank">C#</a> and it later 
-                 evolved to a <a href="https://en.wikipedia.org/wiki/Front-end_web_development" target="_blank">front-end web app</a> (like a pokemon) using <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">JavaScript</a>, <a href="https://en.wikipedia.org/wiki/HTML" target="_blank">HTML</a> and <a href="https://en.wikipedia.org/wiki/CSS" target="_blank">CSS</a>. The website went 
-                 through many redesigns and <a href="https://en.wikipedia.org/wiki/Code_refactoring" target="_blank">refactorings</a> but is has finally came up to this <a href="https://getbootstrap.com/" target="_blank">Bootstrap 5</a> and <a href="https://en.wikipedia.org/wiki/JQuery" target="_blank">JQuery</a> masterpiece!</p>
-                 <p>Spoiler Alert! We are eventually going to recreate the site using the <a href="https://en.wikipedia.org/wiki/ASP.NET_MVC" target="_blank">ASP.NET MVC Framework</a></p>
+        <form id="contact-form" autocomplete="on">
+            <p class=" text-white"><i class="bi bi-lightbulb"></i> Tip: Include your name in the subject of the email
+            </p>
+            <div class="center-form">
+                <input type="text" id="subj" name="subject" placeholder="Subject (Include First and Last Name)"
+                    class="form-control mb-0" required />
             </div>
+            <br>
+            <div class="center-form">
+                <textarea id="msg" name="text" placeholder="Message" class="form-control message" required></textarea>
+            </div>
+            <div class="h-captcha mt-3" data-sitekey="f905f0c2-dacd-408f-b39c-51c7aeace28f"></div>
+            <div class="form-check center-form d-inline-block">
+                <input class="form-check-input" type="checkbox" id="agree-to-tos" required>
+                <label class="form-check-label" for="agree-to-tos">
+                    I have read and agree on the <a href="tos.html">Terms of Service</a>
+                </label>
+            </div>
+            <div class="button-group my-3">
+                <input type="submit" id="send" name="send" value="Send" class="btn btn-success mx-1" disabled />
+                <input type="reset" value="Clear" class="btn btn-danger mx-1" />
+            </div>
+        </form>
+        <p id="user-message"></p>
+        <div class="container-sm">
+            <p>While you are writing us an email, let us tell you a little bit about our website, MathFlare (previously
+                known as "Liquid Geometry")!
+                So the pro`ject started as a desktop application using
+                <a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="_blank">C#</a> and it
+                later
+                evolved to a <a href="https://en.wikipedia.org/wiki/Front-end_web_development" target="_blank">front-end
+                    web app</a> (like a pokemon) using <a href="https://en.wikipedia.org/wiki/JavaScript"
+                    target="_blank">JavaScript</a>, <a href="https://en.wikipedia.org/wiki/HTML"
+                    target="_blank">HTML</a> and <a href="https://en.wikipedia.org/wiki/CSS" target="_blank">CSS</a>.
+                The website went
+                through many redesigns and <a href="https://en.wikipedia.org/wiki/Code_refactoring"
+                    target="_blank">refactorings</a> but is has finally came up to this <a
+                    href="https://getbootstrap.com/" target="_blank">Bootstrap 5</a> and <a
+                    href="https://en.wikipedia.org/wiki/JQuery" target="_blank">JQuery</a> masterpiece!
+            </p>
+            <p>Spoiler Alert! We are eventually going to recreate the site using the <a
+                    href="https://en.wikipedia.org/wiki/ASP.NET_MVC" target="_blank">ASP.NET MVC Framework</a></p>
+        </div>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
@@ -78,7 +105,23 @@
     <script src="dist/navbar.js"></script>
     <script src="https://hcaptcha.com/1/api.js?hl=en" async defer></script>
     <script src="dist/contact.mail.js"></script>
+    <script>
+        window.addEventListener('load', () => {
+            document.querySelector('#send').disabled = true;
+        });
+        //make the button enabled only if both the agree-to-tos and hcaptcha ckeckboxes are checked
+        window.addEventListener('load', () => {
+            document.querySelector('#agree-to-tos').addEventListener('change', () => {
+                if (document.querySelector('#agree-to-tos').checked && document.querySelector('#checkbox').prop('aria-checked') == true) {
+                    document.querySelector('#send').disabled = false;
+                } else {
+                    document.querySelector('#send').disabled = true;
+                }
+            });
+        });
+    </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
+
 </html>
