fix: minor typo

--- a/displacement.html
+++ b/displacement.html
@@ -112,7 +112,7 @@
             </div>
             <br />
             <div class="center-form">
-                <input type="submit" id="vcalc3" class="btn btn-success btn-lg" value="Calculate Δt">
+                <input type="submit" id="vcalc3" class="btn btn-success btn-lg" value="Calculate v">
             </div>
         </form>
         <br>
